assets/css/section_main.css
.section_main{
  z-index: 8;
  text-align: center;
  padding: 0;
}

.section_main_wrapper{
  width: 100%;
  height: 100%;
}

.main_content_top{
  height: 100%;
  padding-bottom: 4rem;
  padding-top: 8rem;
  background-color: #B3B3B3;
  position: relative;
  width: 100%;
}

.main_content_bottom{
  height: 100%;
  padding-top: 4rem;
  position: relative;
  width: 100%;
  background-color: #4D4D4D;
}

.main_keyslider{
  width: 100%;
  height: 28rem;
  background-color: #E6E6E6;
  position: relative;
  opacity: 1;
}

.header__label{
  position: absolute;
  top: 8px;
  left: 50%;
  font-size: 50%;
  transform: translate(-50%,0);
  opacity: .6;
  user-select: none;
}



.main_key_modal{
  position: fixed;
  right: 0;
  left: 0;
  top: 0;
  width: 100%;
  background-color: #414042;
  display: none;
  z-index: 3000;
}

.main_key_modal_1{
  position: relative;
  width: 100%;
  flex-wrap: wrap;
  padding: 4rem 2rem 2rem 2rem;
  font-size: 200%;
  overflow-y: scroll; 
}

.main_key_modal_pages{
  position: absolute;
  bottom: 10px;
  left: 50%;
  transform: translate(-50%,0);
}

#main_key_modal_close{
  position: absolute;
  top: 15px;
  left: 50%;
  transform: translate(-50%,0);
  color: white;
  cursor: pointer;
}

.main_key_modal_pages_circle{
  width: 8px;
  height: 8px;
  background-color: gray;
  border-radius: 50%;
  margin: 0 3px;
}

.main_key_modal_1 p{
  margin: 0;
  padding: 0;
}

.main_content_top .header__label,
.main_content_bottom .header__label{
  color: white;
}


.main_keyslider:after{
  position: absolute;
  content: "";
  width: 3px;
  height: 20px;
  left: 3rem;
  top: 0;
  transform: translate(-50%,-100%);
  background-color: #E6E6E6;
  z-index: 2500;
}

.main_keyslider:before{
  position: absolute;
  content: "";
  width: 3px;
  height: 20px;
  left: 3rem;
  bottom: 0;
  transform: translate(-50%,100%);
  background-color: #E6E6E6;
  z-index: 2500;
}

.main_keyslider_bubble-top{
  position: absolute;
  width: 20px;
  height: 20px;
  left: 3rem;
  bottom: -20px;
  transform: translate(-50%,100%);
  background-color: #E6E6E6;
  border-radius: 50%;
  z-index: 2500;
}

.main_keyslider_bubble-bottom{
  position: absolute;
  width: 20px;
  height: 20px;
  left: 3rem;
  top: -20px;
  transform: translate(-50%,-100%);
  background-color: #E6E6E6;
  border-radius: 50%;
  z-index: 2500;
}

.main_keyslider_bubble-top p,
.main_keyslider_bubble-bottom p{
  margin: 0;
  padding: 0;
  font-size: 80%;
  opacity: .5;
  text-align: center;
}


.main_content_top_input{
  background-color: rgba(255,255,255,.1);
  /* remove default styling */
  border: none;
  overflow: auto;
  outline: none;
  box-shadow: none;
}

.main_content_bottom_input{
  background-color: transparent;
}

.main_keyslider_cicle{
  position: absolute;
  top: 50%;
  left: 10px;
  transform: translate(0,-50%);
  user-select: none;
  background-color: gray;
  width: 80px;
  height: 80px;
  border-radius: 50%;
}

.keyslider{
  position: absolute;
  left: 0;
  height: 100%;
  width: 100%;
  overflow-y: scroll;
  overflow-x: none;
  -webkit-overflow: touch;
}

.keyslider_content{
  position: absolute;
  left: 0;
  height: 100%;
  font-size: 250%;
}

.keyslider .key{
  margin: 0 0rem; 
}

.keyslider .key.selected {
  background-color: #B3B3B3;
  border-radius: 50rem;
  border: 0.3rem solid #B3B3B3;
}

.header__input{
  top: 4px;
  font-size: 70%;
  width: 100%;
  text-align: center;
  border: none;
  height: 9rem;
  color: white;
  text-align: left;
  overflow-y: scroll;
  font-size: 120%;
  padding: 0 2rem 0 7rem;
}

.main_content_top_label{
  margin-top: 50px;
}

